[package]
name = "chinese_bitmap_font_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"]}
is_chinese = "1.0"
ab_glyph = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = 2
lto = true
codegen-units = 1
